updated transition reporting

--- a/run_simulation.ipynb
+++ b/run_simulation.ipynb
@@ -33,7 +33,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 17%|█▋        | 2/12 [00:10<00:51,  5.16s/it]"
+      "100%|██████████| 12/12 [01:04<00:00,  5.34s/it]\n",
+      "100%|██████████| 12/12 [01:03<00:00,  5.26s/it]\n",
+      "100%|██████████| 12/12 [01:04<00:00,  5.34s/it]\n",
+      "100%|██████████| 12/12 [01:10<00:00,  5.90s/it]\n",
+      "100%|██████████| 12/12 [01:09<00:00,  5.82s/it]\n",
+      "100%|██████████| 12/12 [01:10<00:00,  5.84s/it]\n",
+      "100%|██████████| 12/12 [01:15<00:00,  6.32s/it]\n",
+      "100%|██████████| 12/12 [01:15<00:00,  6.33s/it]\n",
+      "100%|██████████| 12/12 [01:15<00:00,  6.31s/it]\n"
      ]
     }
    ],
@@ -47,6 +55,34 @@
     "    sim.run_simulation()\n",
     "    mean_churn = sim._calculate_churn(sim.top_ten)\n",
     "    results.append({'pop': pop, 'pl': pl, 'churn': mean_churn})    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'pop': 0.2, 'pl': 1, 'churn': 3.3636363636363638},\n",
+       " {'pop': 0.2, 'pl': 1.5, 'churn': 2.4545454545454546},\n",
+       " {'pop': 0.2, 'pl': 2, 'churn': 1.9090909090909092},\n",
+       " {'pop': 0.5, 'pl': 1, 'churn': 3.727272727272727},\n",
+       " {'pop': 0.5, 'pl': 1.5, 'churn': 3.5454545454545454},\n",
+       " {'pop': 0.5, 'pl': 2, 'churn': 3.272727272727273},\n",
+       " {'pop': 0.8, 'pl': 1, 'churn': 4.818181818181818},\n",
+       " {'pop': 0.8, 'pl': 1.5, 'churn': 6.0},\n",
+       " {'pop': 0.8, 'pl': 2, 'churn': 5.454545454545454}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
    ]
   },
   {
