param sweep eval

--- a/eval_results.ipynb
+++ b/eval_results.ipynb
@@ -771,36 +771,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "pl\n",
-       "1.666667    0.191013\n",
-       "1.555556    0.191549\n",
-       "1.111111    0.198305\n",
-       "1.000000    0.199651\n",
-       "1.888889    0.199989\n",
-       "1.444444    0.204010\n",
-       "1.333333    0.204282\n",
-       "1.777778    0.210732\n",
-       "1.222222    0.211838\n",
-       "2.000000    0.213478\n",
-       "1.500000    0.222166\n",
-       "1.250000    0.222549\n",
-       "1.750000    0.245289\n",
+       "1.555556    0.188333\n",
+       "1.666667    0.191494\n",
+       "1.222222    0.193443\n",
+       "1.111111    0.194965\n",
+       "1.000000    0.195116\n",
+       "1.888889    0.197957\n",
+       "2.000000    0.198568\n",
+       "1.444444    0.199195\n",
+       "1.500000    0.199240\n",
+       "1.333333    0.201033\n",
+       "1.777778    0.209284\n",
+       "1.250000    0.222320\n",
+       "1.750000    0.228259\n",
        "Name: mean_jsd, dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "results.groupby(\"pl\").mean()['mean_jsd'].sort_values()"
+    "results.groupby(\"pl\").median()['mean_jsd'].sort_values()"
    ]
   },
   {
